[gd_scene load_steps=5 format=2]

<<<<<<< HEAD:Scenes/Level_Components/Code_Blocks/CallLoop1.tscn
[ext_resource path="res://Scripts/Level_Components/Code_Blocks/CallLoop.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CodeBlock.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Placeholders/Loop1.PNG" type="Texture" id=3]
=======
[ext_resource path="res://Assets/Placeholders/Loop1.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_Components/Code_Blocks/Call_Loop.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CodeBlock.tscn" type="PackedScene" id=3]
>>>>>>> c9aa1316df2f232d5fb1a6b023e024cc820e3163:Scenes/Level_Components/Code_Blocks/CallLoop.tscn

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.5, 28.5 )

[node name="Call_Loop1" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "Changes in sprite texture is in the code"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8.9407e-07, 4.47035e-07 )
scale = Vector2( 0.220588, 0.291667 )
texture = ExtResource( 1 )

[node name="CodeBlock" parent="." instance=ExtResource( 3 )]

[connection signal="input_event" from="." to="." method="_on_Area2D_input_event"]
